# Voct

./: .gitignore  .mise.toml  README.md  Taskfile.yml  pyproject.toml
src/voct/: __init__.py  __main__.py  main.py  ptt_main.py
src/voct/domain/: entities.py  ports.py
src/voct/infra/: markdown_transcript_file.py  push_to_talk_recorder.py  pynput_hotkey_listener.py  pyperclip_clipboard.py  sounddevice_notifier.py  sounddevice_recorder.py  wav_file_repository.py  whisper_transcriber.py
src/voct/usecase/: push_to_talk.py  record_and_transcribe.py
tests/domain/: test_entities_phase2.py  test_ports_phase2.py
tests/infra/: test_markdown_transcript_file.py  test_push_to_talk_recorder.py  test_pynput_hotkey_listener.py  test_pyperclip_clipboard.py  test_sounddevice_notifier.py  test_sounddevice_recorder.py  test_wav_file_repository.py  test_whisper_transcriber.py
tests/usecase/: test_push_to_talk.py  test_record_and_transcribe.py
