[project]
name = "voct"
version = "0.1.0"
description = "Local CLI voice input tool using faster-whisper"
requires-python = ">=3.12"
dependencies = [
    "faster-whisper",
    "sounddevice",
    "soundfile",
    "numpy",
    "pynput",
    "pyperclip",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[project.scripts]
voct = "voct.main:main"
voct-ptt = "voct.ptt_main:ptt_main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/voct"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
]

[tool.ruff.format]
quote-style = "double"
